--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jasonbeucher.github.io/portfolio2024",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-
-
+    "lint": "next lint"
   },
   "dependencies": {
     "animejs": "^3.2.2",
