--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "typecheck": "tsc"
   },
   "dependencies": {
     "animejs": "^3.2.2",
